--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
       </nav>
       <ul class="list header-contacts">
         <li class="contact-item">
-          <a class="link contakt-link" href="">info@devstudio.com</a></li>
+          <a class="link contacts-link" href="mailto:info@devstudio.com" aria-label="mail">
+              <svg class="contacts-icon" width="16" height="12">
+                <use href="./symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a>
+        </li>
         <li class="contact-item">
-          <a class="link contakt-link" href="">+38 096 111 11 11</a></li>
+          <a class="link contacts-link" href="tel:+380961111111" aria-label="phone">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a></li>
       </ul>
       </div>
     </header>
@@ -47,18 +56,38 @@
         <h2 class="text-none">Наші переваги</h2>
         <ul class="list description-list card-set">
           <li class="card-item">
+            <div class="description-box">
+              <svg class="" width="70" height="70">
+                    <use href="./symbol-defs.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="description-item">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="description-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="card-item">
+            <div class="description-box">
+              <svg class="" width="70" height="70">
+                    <use href="./symbol-defs.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="description-item">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="description-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="card-item">
+            <div class="description-box">
+              <svg class="" width="70" height="70">
+                    <use href="./symbol-defs.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="description-item">ПЛАНУВАННЯ</h3>
             <p class="description-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li class="card-item">
+            <div class="description-box">
+              <svg class="" width="70" height="70">
+                    <use href="./symbol-defs.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="description-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="description-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
@@ -91,7 +120,7 @@
             <img class="team-foto" src="./images/igor.img.jpg" alt="проодукт менеджер" width="270" />
             <h3 class="team-name">Ігор Дем'яненко</h3>
             <p class="team-prof">Product Designer</p>
-            <ul class="social-list list">
+             <ul class="social-list list">
               <li class="social-list-item">
                 <a href="" class="social-list-link">
                   <svg aria-label="іконка інстаграму" class="social-list-icon">
@@ -161,7 +190,7 @@
             <img class="team-foto" src="./images/mukola.img.jpg" alt="маркейтінг" width="270" />
             <h3 class="team-name">Микола Тарасов</h3>
             <p class="team-prof">Marketing</p>
-            <ul class="social-list list">
+             <ul class="social-list list">
               <li class="social-list-item">
                 <a href="" class="social-list-link">
                   <svg aria-label="іконка інстаграму" class="social-list-icon">
@@ -231,7 +260,7 @@
         </div>
       </section>
       <!--нова секція постійні клієнти-->
-     <section class="about section">
+     <section class="section">
         <div class="container">
         <h2 class="section-titel">Постійні клієнти</h2>
         <ul class="list card-set client-list">
@@ -297,7 +326,49 @@
           <li><a class="link address-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </address>
-      </div>
+    </div>
+    <div class="footer-contact">
+      <h2 class="footer-title">приєднуйтесь</h2>
+      <ul class="social-list list">
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg aria-label="іконка інстаграму" class="footer-icon" width="20" height="20>
+                    <use href="./symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg aria-label="іконка твітера" class="footer-icon" width="20" height="20>
+                    <use href="./symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg aria-label="іконка фейсбука" class="footer-icon" width="20" height="20>
+                    <use href="./symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-list-item">
+                <a href="" class="social-list-link">
+                  <svg aria-label="іконка лінкедіт" class="footer-icon" width="20" height="20>
+                    <use href="./symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+
+
+
+                </a>
+              </li>
+            </ul>
+
+    </div>
     </footer>
   </body>
 </html>
+
+
+
+
+
