--- a/portfolio.html
+++ b/portfolio.html
@@ -30,9 +30,20 @@
           </ul>
         </nav>
         <ul class="list header-contacts">
-          <li><a class="link contakt-link" href="">info@devstudio.com</a></li>
-          <li><a class="link contakt-link" href="">+38 096 111 11 11</a></li>
-        </ul>
+        <li class="contact-item">
+          <a class="link contacts-link" href="mailto:info@devstudio.com" aria-label="mail">
+              <svg class="contacts-icon" width="16" height="12">
+                <use href="./symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a>
+        </li>
+        <li class="contact-item">
+          <a class="link contacts-link" href="tel:+380961111111" aria-label="phone">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a></li>
+      </ul>
       </div>
     </header>
     <main>
