--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
     <title>Portfolio</title>
   </head>
   <body class="body">
-    <!--шапка сайта-->
+     <!-- Шапка сайту -->
     <header class="header">
       <div class="container header-container">
-        <a class="link logo" href="">Web<span class="logo-header">Studio</span> </a>
+        <a class="link logo" href="">Web<span class="logo-header">Studio</span></a>
         <nav class="nav">
           <ul class="list header-list">
             <li><a class="link nav-link" href="./index.html">Студія</a></li>
@@ -30,110 +30,113 @@
           </ul>
         </nav>
         <ul class="list header-contacts">
-        <li class="contact-item">
-          <a class="link contacts-link" href="mailto:info@devstudio.com" aria-label="mail">
+          <li class="contact-item">
+            <a class="link contacts-link" href="mailto:info@devstudio.com" aria-label="mail">
               <svg class="contacts-icon" width="16" height="12">
                 <use href="./symbol-defs.svg#icon-envelope"></use>
               </svg>
-              info@devstudio.com</a>
-        </li>
-        <li class="contact-item">
-          <a class="link contacts-link" href="tel:+380961111111" aria-label="phone">
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-item">
+            <a class="link contacts-link" href="tel:+380961111111" aria-label="phone">
               <svg class="contacts-icon" width="10" height="16">
                 <use href="./symbol-defs.svg#icon-smartphone"></use>
               </svg>
-              +38 096 111 11 11</a></li>
-      </ul>
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
-      <!--головна сторінка-->
+      <!-- Портфоліо -->
       <section class="section">
         <div class="container">
-          <h1 class="text-none">Портфоліо</h1>
+          <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="list portfolio-filter">
-            <li><button class="btn filter-btn" type="button">Усі</button></li>
+            <li><button class="btn filter-btn current" type="button">Усі</button></li>
             <li><button class="btn filter-btn" type="button">Веб-сайти</button></li>
             <li><button class="btn filter-btn" type="button">Додатки</button></li>
             <li><button class="btn filter-btn" type="button">Дизайн</button></li>
             <li><button class="btn filter-btn" type="button">Маркетинг</button></li>
           </ul>
           <ul class="list portfolio-list card-set">
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/tehtnokrack.img.jpg" alt="Технокряк" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/tehtnokrack.jpg" alt="Ноут" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/NewOrlean.img.jpg" alt="Постер" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/NewOrlean.jpg" alt="Постер" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/Seafood.img.jpg" alt="Ресторан" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/Seafood.jpg" alt="Ресторан" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/Prime.img.jpg" alt="Проєкт Prime" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/Prime.jpg" alt="Навушники" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Проєкт Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/Boxes.img.jpg" alt="Проєкт Boxes" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/Boxes.jpg" alt="Коробка" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Проєкт Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/Bordersimg.img.jpg" alt="Технокряк" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/Bordersimg.jpg" alt="ПК" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/LimitedEdition.img.jpg" alt="ТLimited Edition" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/LimitedEdition.jpg" alt="Книга" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
-                </div>
-              </a>
+                </div></a
+              >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/LAB.jpg" alt="LAB" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/LAB.jpg" alt="LAB" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div></a
               >
             </li>
-            <li class="portfolio-item card-item">
-              <a class="link" href="">
-                <img src="./images/GrowingBusiness.jpg" alt="Business" width="370" />
+            <li class="card-item">
+              <a class="link portfolio-link" href=""
+                ><img src="./images/GrowingBusiness.jpg" alt="Ноут" width="370" height="294" />
                 <div class="portfolio-block">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
@@ -144,27 +147,85 @@
         </div>
       </section>
     </main>
-    <!--футер-->
     <footer class="footer">
-      <div class="container">
-        <a class="link logo" href="">Web<span class="logo-footer">Studio</span></a>
-        <address class="address">
-          <ul class="list address-list">
+      <div class="container footer-box">
+        <div class="footer-address">
+          <a class="link logo" href="">Web<span class="logo-footer">Studio</span></a>
+          <address class="address">
+            <ul class="list address-list">
+              <li>
+                <a
+                  class="link address-link"
+                  href="https://goo.gl/maps/Pd6uUxVSm1AgarqQ9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li>
+                <a class="link address-link" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li><a class="link address-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-contsct">
+          <h2 class="footer-title">приєднуйтесь</h2>
+          <ul class="list social">
             <li>
               <a
-                class="link address-map"
-                href="https://goo.gl/maps/Pd6uUxVSm1AgarqQ9"
+                class="link social-link"
+                href=""
                 target="_blank"
                 rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
+                aria-label="instagram"
               >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <a class="link address-link" href="mailto:info@example.com">info@example.com</a>
+              <a
+                class="link social-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li><a class="link address-link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li>
+              <a
+                class="link social-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                class="link social-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
